# playdl-signin-ui-qt

./: CMakeLists.txt  googlesigninui.qrc  injectjs.js  loginwindow.cpp  loginwindow.h  main.cpp  materialbusyindicator.cpp  materialbusyindicator.h
include/: googleloginwindow.h
src/: googleloginwindow.cpp  injectjs.js  main.cpp  materialbusyindicator.cpp
