cmake_minimum_required(VERSION 2.8.12)

project(playdl-signin-ui-qt)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(USE_WEBENGINE "Use the QT Webengine for the google sign in" ON)

find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
add_library(playdl-signin-ui-qt-lib src/googleloginwindow.cpp include/googleloginwindow.h src/materialbusyindicator.cpp src/materialbusyindicator.h googlesigninui.qrc)
if(USE_WEBENGINE)
find_package(Qt5 COMPONENTS WebEngineWidgets REQUIRED)
set(WEBENGINEDEPS Qt5::WebEngineWidgets)
else()
target_compile_definitions(playdl-signin-ui-qt-lib PUBLIC WITHOUT_WEBENGINE)
set(WEBENGINEDEPS "")
endif()
target_link_libraries(playdl-signin-ui-qt-lib PUBLIC Qt5::Core Qt5::Widgets ${WEBENGINEDEPS})
target_include_directories(playdl-signin-ui-qt-lib PUBLIC include/)

add_executable(${PROJECT_NAME} src/main.cpp)
target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Widgets ${WEBENGINEDEPS} playdl-signin-ui-qt-lib)
